--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: 100vh;
             margin: 0;
             position: relative;
-            overflow: hidden;
+            overflow-y: auto;
             padding: 20px;
             box-sizing: border-box;
         }
@@ -26,51 +26,54 @@
             margin-bottom: 20px;
             text-shadow: 0 0 20px gold, 0 0 40px gold;
             position: relative;
-            z-index: 1;
+            z-index: 2;
         }
         h2 {
-            font-size: clamp(3rem, 10vw, 9rem);
+            font-size: clamp(3rem, 10vw, 13rem);
             font-family: "Brush Script MT", cursive;
             text-shadow: 0 0 30px gold, 0 0 60px gold;
             position: relative;
-            z-index: 1;
+            z-index: 2;
         }
         #countdown {
             font-size: clamp(1rem, 4vw, 2rem);
             position: relative;
-            z-index: 1;
+            z-index: 2;
         }
         .spotlight {
             position: absolute;
-            width: 35vw;
-            height: 35vw;
-            background: radial-gradient(circle, rgba(255,255,200,0.8) 0%, rgba(0,0,0,0) 70%);
-            top: 15%;
+            width: 40vw;
+            height: 40vw;
+            background: radial-gradient(circle, rgba(255,255,200,0.5) 0%, rgba(0,0,0,0) 70%);
+            top: 10%;
             mix-blend-mode: screen;
             border-radius: 50%;
             animation: moveSpotlights 6s infinite alternate ease-in-out;
         }
         .spotlight.left {
-            left: 5%;
+            left: 15%;
             animation-delay: 0s;
         }
         .spotlight.right {
-            right: 5%;
+            right: 15%;
             animation-delay: 3s;
         }
         @keyframes moveSpotlights {
-            0% { transform: translateY(-10%) translateX(-5%); }
-            100% { transform: translateY(10%) translateX(5%); }
+            0% { transform: translateY(-5%) translateX(-5%); }
+            100% { transform: translateY(5%) translateX(5%); }
         }
 
         @media (max-width: 768px) {
-            .spotlight {
-                width: 50vw;
-                height: 50vw;
-                top: 5%;
+            body {
+                height: auto;
             }
-            .spotlight.left { left: 2%; }
-            .spotlight.right { right: 2%; }
+            .spotlight {
+                width: 60vw;
+                height: 60vw;
+                top: 0;
+            }
+            .spotlight.left { left: 5%; }
+            .spotlight.right { right: 5%; }
         }
     </style>
 </head>
