--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
             .spotlight.left { left: 5%; }
             .spotlight.right { right: 5%; }
         }
+        .reveal {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+.reveal.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.year {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
     </style>
 </head>
 <body>
@@ -83,7 +98,10 @@
     <h2>Øsby Ladies</h2>
     <h1>The Final Show</h1>
     <div id="countdown"></div>
-
+<section class="reveal">
+  <h2 class="year">Sæson 2021/2022</h2>
+  <img src="images/2022.jpg" alt="Sæson 2021/2022" />
+</section>
     <script>
         function updateCountdown() {
             const targetDate = new Date("September 10, 2025 18:30:00").getTime();
@@ -110,5 +128,23 @@
         updateCountdown();
         setInterval(updateCountdown, 1000);
     </script>
+    <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const reveals = document.querySelectorAll('.reveal');
+    const observerOptions = {
+      threshold: 0.1
+    };
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, observerOptions);
+
+    reveals.forEach(el => observer.observe(el));
+  });
+</script>
 </body>
 </html>
