Rettelse af billede post-fix

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div id="countdown"></div>
 <section class="reveal">
   <h2 class="year">Sæson 2021/2022</h2>
-  <img src="images/2022.jpg" alt="Sæson 2021/2022" />
+  <img src="images/2022.jpeg" alt="Sæson 2021/2022" />
 </section>
     <script>
         function updateCountdown() {
