Ændring af billedestørrelse

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
       transition: opacity 0.6s ease-out, transform 0.6s ease-out;
       margin: 100px 0;
     }
+    .reveal img {
+  max-width: 400px;
+  width: 100%;      /* fylder 100% af de 400px hvis containeren er større */
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
     .reveal.show {
       opacity: 1;
       transform: translateY(0);
