--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
     .reveal {
       opacity: 0;
       transform: translateY(20px);
-      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+      transition: opacity 2.5s ease-out, transform 2.5s ease-out;
       margin: 100px 0;
     }
     .reveal img {
-  max-width: 400px;
+  max-width: 1000px;
   width: 100%;      /* fylder 100% af de 400px hvis containeren er større */
   height: auto;
   display: block;
@@ -106,6 +106,7 @@
     .year {
       font-size: 3rem;
       margin-bottom: 1rem;
+      color: white;
     }
   </style>
 </head>
