--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
   height: auto;
   display: block;
   margin: 0 auto;
+
+        /* Her kommer rammen og skyggen: */
+  border: 5px solid rgba(255,255,255,0.8);        /* hvid ramme med let transparens */
+  box-shadow: 0 0 20px rgba(255,255,255,0.5);     /* diffus hvid glow omkring billedet */
+  border-radius: 8px;                             /* evt. let afrundede hjørner */
 }
     .reveal.show {
       opacity: 1;
@@ -123,8 +128,8 @@
 
   <!-- REVEAL -->
   <section class="reveal">
-    <h2 class="year">Sæson 2021/2022</h2>
-    <img src="images/2022.jpeg" alt="Sæson 2021/2022" />
+    <h2 class="year">Sæson 2022/2023</h2>
+    <img src="images/2023.jpg" alt="Sæson 2022/2023" />
   </section>
 
   <!-- COUNTDOWN SCRIPT -->
