Nyt billede under det første

--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
     <h2 class="year">Sæson 2022/2023</h2>
     <img src="images/2023.jpg" alt="Sæson 2022/2023" />
   </section>
+  
+  <section style="height: 200px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2021/2022</h2>
+    <img src="images/2022.jpg" alt="Sæson 2021/2022" />
+  </section>
 
   <!-- COUNTDOWN SCRIPT -->
   <script>
