--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     <img src="images/2023.jpg" alt="Sæson 2022/2023" />
   </section>
   
-  <section style="height: 200px;"></section>
+  <section style="height: 150px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2021/2022</h2>
-    <img src="images/2022.jpg" alt="Sæson 2021/2022" />
+    <img src="images/2022.JPG" alt="Sæson 2021/2022" />
   </section>
 
   <!-- COUNTDOWN SCRIPT -->
