--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
     <img src="images/2022.JPG" alt="Sæson 2021/2022" />
   </section>
 
+    <section style="height: 150px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2018/2019</h2>
+    <img src="images/2019.JPG" alt="Sæson 2018/2019" />
+  </section>
+  
+    <section style="height: 150px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2017/2018</h2>
+    <img src="images/2018.jpg" alt="Sæson 2017/2018" />
+  </section>
+
   <!-- COUNTDOWN SCRIPT -->
   <script>
     function updateCountdown() {
