--- a/index.html
+++ b/index.html
@@ -153,6 +153,27 @@
     <img src="images/2018.jpg" alt="Sæson 2017/2018" />
   </section>
 
+      <section style="height: 150px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2016/2017</h2>
+    <img src="images/2017.JPG" alt="Sæson 2016/2017" />
+  </section>
+
+        <section style="height: 150px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2015/2016</h2>
+    <img src="images/2016.JPG" alt="Sæson 2015/2016" />
+  </section>
+
+        <section style="height: 150px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2014/2015</h2>
+    <img src="images/2015.JPG" alt="Sæson 2014/2015" />
+  </section>
+
   <!-- COUNTDOWN SCRIPT -->
   <script>
     function updateCountdown() {
