Flere billede og mindre mellemrum mellem billeder

--- a/index.html
+++ b/index.html
@@ -132,46 +132,60 @@
     <img src="images/2023.jpg" alt="Sæson 2022/2023" />
   </section>
   
-  <section style="height: 150px;"></section>
+  <section style="height: 50px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2021/2022</h2>
     <img src="images/2022.JPG" alt="Sæson 2021/2022" />
   </section>
 
-    <section style="height: 150px;"></section>
+    <section style="height: 50px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2018/2019</h2>
     <img src="images/2019.JPG" alt="Sæson 2018/2019" />
   </section>
   
-    <section style="height: 150px;"></section>
+    <section style="height: 50px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2017/2018</h2>
     <img src="images/2018.jpg" alt="Sæson 2017/2018" />
   </section>
 
-      <section style="height: 150px;"></section>
+      <section style="height: 50px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2016/2017</h2>
     <img src="images/2017.JPG" alt="Sæson 2016/2017" />
   </section>
 
-        <section style="height: 150px;"></section>
+        <section style="height: 50px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2015/2016</h2>
     <img src="images/2016.JPG" alt="Sæson 2015/2016" />
   </section>
 
-        <section style="height: 150px;"></section>
+        <section style="height: 50px;"></section>
   
     <section class="reveal">
     <h2 class="year">Sæson 2014/2015</h2>
     <img src="images/2015.JPG" alt="Sæson 2014/2015" />
+  </section>
+
+          <section style="height: 50px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2013/2014</h2>
+    <img src="images/2014.JPG" alt="Sæson 2013/2014" />
+  </section>
+
+            <section style="height: 50px;"></section>
+  
+    <section class="reveal">
+    <h2 class="year">Sæson 2012/2013</h2>
+    <img src="images/2013.JPG" alt="Sæson 2012/2013" />
   </section>
 
   <!-- COUNTDOWN SCRIPT -->
