--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     /* Scroll-indikatorens container */
 .scroll-indicator {
   position: absolute;
-  bottom: 20px;               /* afstand til bunden af hero */
+  bottom: 10vh;               /* afstand til bunden af hero */
   left: 50%;
   transform: translateX(-50%) rotate(45deg); /* centrer, lav pil med rotation */
   width: 20px;
