--- a/landing.html
+++ b/landing.html
@@ -2,7 +2,25 @@
 <html>
 <head>
   <meta http-equiv="refresh" content="0; URL=index.html" />
-  <title>Redirecting...</title>
+  <title>The Final Show - QR-kode scannet</title>
+    <style>
+    /* Generel styling */
+    body {
+      background-color: black;
+      color: gold;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
   <p>Du bliver videresendt... <a href="index.html">Klik her, hvis det ikke sker</a>.</p>
