--- a/landing.html
+++ b/landing.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Final Show - QR-kode scannet</title>
-    <style>
-    /* Generel styling */
+  <style>
     body {
       background-color: black;
       color: gold;
@@ -19,11 +18,23 @@
       max-width: 100%;
       height: auto;
       display: block;
-      margin: 0 auto;
+      margin: 20px auto 0 auto;
+    }
+    p {
+      max-width: 600px;
+      margin: 0 auto 20px auto;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-  <p>Du bliver videresendt... <a href="index.html">Klik her, hvis det ikke sker</a>.</p>
+  <p>Tak fordi du scannede QR-koden på Øsby Ladies plakaten.</p>
+  <p>Mon ikke det er fordi, du er interesseret i at gå på holdet? Det er jeg sikker på :-)</p>
+  <p>Jeg glæder mig til vi ses til en forrygende sæson.<br>
+  Følg med på <a href="https://www.øsby-if.dk" style="color: gold;">www.øsby-if.dk</a> for tilmelding, der åbner i starten af august.<br>
+  Husk at du også kan følge holdet på Instagram og Facebook.</p>
+
+  <!-- Billedet indsættes her -->
+  <img src="billede.jpg" alt="Øsby Ladies">
 </body>
 </html>
