--- a/landing.html
+++ b/landing.html
@@ -35,6 +35,6 @@
   Husk at du også kan følge holdet på Instagram og Facebook.</p>
 
   <!-- Billedet indsættes her -->
-  <img src="billede.jpg" alt="Øsby Ladies">
+  <img src="IMG_3895.jpg" alt="Øsby Ladies">
 </body>
 </html>
