--- a/index.html
+++ b/index.html
@@ -168,6 +168,13 @@
   </header>
 
   <!-- REVEAL -->
+    <section class="reveal">
+    <h2 class="year">Sæson 2024/2025</h2>
+    <img src="images/2025.jpg" alt="Sæson 2024/2025" />
+  </section>
+  
+  <section style="height: 50px;"></section>
+  
   <section class="reveal">
     <h2 class="year">Sæson 2022/2023</h2>
     <img src="images/2023.jpg" alt="Sæson 2022/2023" />
